versions/v3.6.0/build/dts/api/bindings/gpio/xlnx,ps-gpio.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/build/dts/api/bindings/gpio/xlnx,ps-gpio.html
original_path: build/dts/api/bindings/gpio/xlnx,ps-gpio.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down menu on the left and select the desired version.

# xlnx,ps-gpio

Vendor: [Xilinx](../../bindings.md#dt-vendor-xlnx)

## Description

```text
Xilinx Zynq-7000/ZynqMP MIO/EMIO GPIO controller node.

This GPIO controller is contained in both the Xilinx Zynq-7000 and
ZynqMP (UltraScale) SoCs. It interfaces both I/O pins of the SoC,
which can be mapped in the system design tools (MIO pins), or SoC-
internal signals between the processor system and the programmable
logic part of the SoC (EMIO pins).

It is organized in banks, where the number of banks and total number
of available GPIO pins differs between the two SoC families:

Zynq-7000 (comp. Zynq-7000 TRM, chap. 14.1.2, p. 381):
  * Bank 0: MIO  pins [31:00]
  * Bank 1: MIO  pins [53:32] (total: 54 MIO pins)
  * Bank 2: EMIO pins [31:00]
  * Bank 3: EMIO pins [63:32] (total: 64 EMIO pins)

ZynqMP (UltraScale) (comp. Ultrascale TRM, chap. 27, p. 769):
  * Bank 0: MIO  pins [25:00]
  * Bank 1: MIO  pins [51:26]
  * Bank 2: MIO  pins [77:52] (total: 78 MIO pins, 26 per bank)
  * Bank 3: EMIO pins [31:00]
  * Bank 4: EMIO pins [63:32]
  * Bank 5: EMIO pins [95:64] (total: 96 EMIO pins)

The controller is interrupt-capable. Certain pins both in the Zynq-
7000 and the ZynqMP are reserved or at least limited regarding their
direction.
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

(None)

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “xlnx,ps-gpio” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts` | `array` | ```text interrupts for device ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
